tests/frontend/fail/array/create_arg_array_type_mismatch.act
constructor of A
interface constructor(uint[2] n1)


constructor of B
interface constructor()

creates
  A a := create A([true, false])
